--- a/Binarios/ResBinario.WebAdmin/Views/Categorias/Index.cshtml
+++ b/Binarios/ResBinario.WebAdmin/Views/Categorias/Index.cshtml
@@ -1,24 +1,18 @@
-﻿@model IEnumerable<ResBinario.BL.Producto>
+﻿@model IEnumerable<ResBinario.BL.Categoria>
 
 @{
-    ViewBag.Title = "Productos";
+    ViewBag.Title = "Categorias";
 }
 
-<h2>Productos</h2>
+<h2>Categorias</h2>
 
 <p>
-    @Html.ActionLink("Nuevo Producto", "Crear")
+    @Html.ActionLink("Nueva Categoria", "Crear")
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Categoria)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Precio)
         </th>
         <th></th>
     </tr>
@@ -27,12 +21,6 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Categoria.Descripcion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Precio)
         </td>
         <td>
             @Html.ActionLink("Editar", "Editar", new { id=item.Id }) |
