--- a/Binarios/ResBinario.WebAdmin/Views/Categorias/Detalle.cshtml
+++ b/Binarios/ResBinario.WebAdmin/Views/Categorias/Detalle.cshtml
@@ -1,4 +1,4 @@
-﻿@model ResBinario.BL.Producto
+﻿@model ResBinario.BL.Categoria
 
 @{
     ViewBag.Title = "Detalle";
@@ -7,7 +7,7 @@
 <h2>Detalle</h2>
 
 <div>
-    <h4>Producto</h4>
+    <h4>Categoria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -16,22 +16,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria.Descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Categoria.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Precio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Precio)
         </dd>
 
     </dl>
