--- a/Binarios/ResBinario.WebAdmin/Views/Categorias/Eliminar.cshtml
+++ b/Binarios/ResBinario.WebAdmin/Views/Categorias/Eliminar.cshtml
@@ -1,4 +1,4 @@
-﻿@model ResBinario.BL.Producto
+﻿@model ResBinario.BL.Categoria
 
 @{
     ViewBag.Title = "Eliminar";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Producto</h4>
+    <h4>Categoria</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,22 +17,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Categoria.Descripcion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Categoria.Descripcion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Precio)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Precio)
         </dd>
 
     </dl>
